# vrc-join-notification-pushover-windows

./: FyneApp.toml  LICENSE  README.md  VRChatJoinNotifier.ps1  console_stub.go  console_windows.go  go.mod  index.html  main.go  main_fallback.go  pyproject.toml  script.js  styles.css
cmd/VRChatJoinNotificationWithPushover/: main_windows.go
cmd/vrchat-join-notification-with-pushover/: main.go
cmd/vrchat-notifier/: main_windows.go
internal/app/: config.go  console_windows.go  constants.go  guard_windows.go  logger.go  messagebox_windows.go  monitor.go  notifier.go  session.go  system_tray_windows.go  ui_windows.go  win32_windows.go
internal/assets/: icon_windows.go
internal/config/: config.go
internal/core/: core.go
internal/logger/: logger.go
internal/logwatcher/: logwatcher.go
internal/notify/: notification.go  notification_other.go  notification_windows.go
internal/pushover/: pushover.go
internal/session/: session.go
public/: index.html
source/: VRChatJoinNotifier.ps1  VRChatJoinNotifier_linux.py
src/: vrchat-join-notification-with-pushover.ps1  vrchat-join-notification-with-pushover_linux.py  vrchat-join-notification-with-pushover_windows.py
src/vrchat_join_notification/: __init__.py  app.py  entrypoint_utils.py
tools/: build-windows-exe.ps1  tools.go
